--- a/app/views/condolences/_form.html.erb
+++ b/app/views/condolences/_form.html.erb
@@ -21,7 +21,7 @@
     <%= country_select "condolence", :country %>
   </div>
   <div class="field">
-    <%= f.label :address %><br />
+    <%= f.label :address, "Mail Id" %><br />
     <%= f.text_field :address %>
   </div>
   <div class="field">
