--- a/app/views/notice_event_places/_form.html.erb
+++ b/app/views/notice_event_places/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@notice_event_place) do |f| %>
+<%= form_for @notice_event_place, :html => {:class => "form-horizontal"} do |f| %>
   <% if @notice_event_place.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@notice_event_place.errors.count, "error") %> prohibited this notice_event_place from being saved:</h2>
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :event_type %><br />
+    <%= f.label :event_type %>
     <%= f.text_field :event_type %>
   </div>
   <div class="field">
