--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,5 +16,8 @@
  *= require timelineJS/timeline
  *= require gmaps4rails
  *= require leaflet
- *= require_tree .
+ *= require obi.webflow
+ *= require webflow
+ *= require home
  */
+
