--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,108 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Notice" %></title>
-    <%= csrf_meta_tags %>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title><%= content_for?(:title) ? yield(:title) : "Notice" %></title>
+  <%= csrf_meta_tags %>
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+  <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
-    <![endif]-->
-    <%= stylesheet_link_tag "application", :media => "all" %>
+      <![endif]-->
+      <%= stylesheet_link_tag "application", :media => "all" %>
 
-    <!-- For third-generation iPad with high-resolution Retina display: -->
-    <!-- Size should be 144 x 144 pixels -->
-    <%# favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %>
+      <!-- For third-generation iPad with high-resolution Retina display: -->
+      <!-- Size should be 144 x 144 pixels -->
+      <%# favicon_link_tag 'apple-touch-icon-144x144-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '144x144' %>
 
-    <!-- For iPhone with high-resolution Retina display: -->
-    <!-- Size should be 114 x 114 pixels -->
-    <%# favicon_link_tag 'apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114' %>
+      <!-- For iPhone with high-resolution Retina display: -->
+      <!-- Size should be 114 x 114 pixels -->
+      <%# favicon_link_tag 'apple-touch-icon-114x114-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '114x114' %>
 
-    <!-- For first- and second-generation iPad: -->
-    <!-- Size should be 72 x 72 pixels -->
-    <%# favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72' %>
+      <!-- For first- and second-generation iPad: -->
+      <!-- Size should be 72 x 72 pixels -->
+      <%# favicon_link_tag 'apple-touch-icon-72x72-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png', :sizes => '72x72' %>
 
-    <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-    <!-- Size should be 57 x 57 pixels -->
-    <%# favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
+      <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+      <!-- Size should be 57 x 57 pixels -->
+      <%# favicon_link_tag 'apple-touch-icon-precomposed.png', :rel => 'apple-touch-icon-precomposed', :type => 'image/png' %>
 
-    <!-- For all other devices -->
-    <!-- Size should be 32 x 32 pixels -->
-    <%# favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
+      <!-- For all other devices -->
+      <!-- Size should be 32 x 32 pixels -->
+      <%# favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
 
-    <%= javascript_include_tag "application" %>
-  </head>
-  <body>
+      <%= javascript_include_tag "application" %>
+    </head>
+    <body>
+     <%= render "/layouts/navigation" %>
 
-    <div class="navbar navbar-fluid-top">
-      <div class="navbar-inner">
-        <div class="container-fluid container">
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="http://ninaivu.7zero.com:3000"><%= image_tag('ninaivu_logo.png') %></a>
-            <div class="container-fluid nav-collapse">
-              <ul class="nav">
-                <li class="navbar-text"><%# link_to "Create Orbituary site", new_orbituarysite_path :data-toggle => "modal" href="#myModal2"  %>
-                  <% if user_signed_in? %>                
-                    <%= link_to "Create Orbituary Site", '/orbituarysites/new', :class => "btn btn-default" %>
-                  <% else %>
-                    <a data-toggle="modal" href="#myModal6" href="/condolences/new"><button class="btn btn-default">Create Orbituary site</button></a>
-                  <% end %>
-                </li>
-              </ul>
-            <div class="modal fade hide" id="myModal6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title">Please Sign in</h4>
-                  </div>
-                  <div class="modal-body">
-                      <div class="span3 social_button">
-                        <p><strong>Please sign in to to create a new site</p></strong>
-                        <p><%= link_to raw("<i class=\"icon-facebook\"> | Sign in with Facebook</i>"), user_omniauth_authorize_path(:facebook),:class => "btn btn-facebook"%></p>
-                        <p><%= link_to raw("<i class=\"icon-twitter\"> | Sign in with Twitter</i>"), user_omniauth_authorize_path(:twitter),:class => "btn btn-twitter"%></p>
-                        <p><%= link_to raw("<i class=\"icon-google-plus\"> | Sign in with Google</i>"), user_omniauth_authorize_path(:google_oauth2),:class => "btn btn-google-plus" %></p>
-                      </div>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
-                  </div>
-                </div><!-- /.modal-content -->
-              </div><!-- /.modal-dialog -->
-            </div><!-- /.modal -->
+     <div class="row-fluid">
 
+      <%= bootstrap_flash %>
+      <%= yield %>
 
-        <%= menu_group :pull => :right do %>
-          <% if user_signed_in? %>
-            <%= link_to 'Account', home_account_path, :class => "btn btn-default color_black" %>
-            <%= link_to 'Logout', destroy_user_session_path, :class => "btn btn-default color_black" %>        
-          <% end %>
-        <% end %>
-              </div><!--/.nav-collapse -->
-            </div>
+    </div><!--/row-->
+    <%= yield :scripts %>
+    <div class = "row">
+      <div class="section grey footer">
+        <div class="w-container">
+          <p class="footer-text">Made in Heavan.</p><a class="footer-link" href="http://www.flickr.com/photos/kara_allyson/" target="_blank">Authored by: Coding Donkeys</a><a class="footer-link" href="http://www.pixeden.com/psd-mock-up-templates/3/4-view-iphone-5-psd-vector-mockup"
+          target="_blank">Bandwidth &amp; Storage Sponsored By ORU PAPER</a>
+          <img class="logo-in-footer" src="images/4ba690df-2ae6-4459-903e-238c6569b152_logo-footer.png" width="25px" alt="4ba690df-2ae6-4459-903e-238c6569b152_logo-footer.png">
+        </div>
       </div>
+
     </div>
 
-    <div class="container-fluid container">
-      <div class="row-fluid">
+<script>
+  // To attach Backstrech as the body's background
+  $.backstretch("<%= asset_path('Image_bck_copy.png')%>");
 
-          <%= bootstrap_flash %>
-          <%= yield %>
-
-      </div><!--/row-->
-<%= yield :scripts %>
-      <footer>
-        <p>&copy; Notice 2013</p>
-      </footer>
-
-    </div> <!-- /container -->
-
-  </body>
+</script>
+</body>
 </html>
