--- a/app/views/orbituarysites/show.html.erb
+++ b/app/views/orbituarysites/show.html.erb
@@ -8,18 +8,20 @@
   <%= @orbituarysite.name %>
 </h1>
 <p></p>
+<div class="row">
 <p>
   <a href="#">
   <%= image_tag(@orbituarysite.orbiturerimage_url, :class => "image_left_side") if @orbituarysite.orbiturerimage? %>
-  <% if @orbituarysite.frame == '1' %>
-    <%= image_tag('flower_frames_1.png', :class => "left_side_frame") %>
-  <% elsif @orbituarysite.frame == '2' %>
-    <%= image_tag('flower_frames_5.png', :class => "left_side_frame") %>
-  <% else %>
-    <%= image_tag('flower_frames_5.png', :class => "left_side_frame") %>
-  <% end %>
+  <%# if @orbituarysite.frame == '1' %>
+    <%# image_tag('flower_frames_1.png', :class => "left_side_frame") %>
+  <%# elsif @orbituarysite.frame == '2' %>
+    <%# image_tag('flower_frames_5.png', :class => "left_side_frame") %>
+  <%# else %>
+    <%# image_tag('flower_frames_5.png', :class => "left_side_frame") %>
+  <%# end %>
   </a>
 </p>
+</div>
 <h4 class="center"><%= @orbituarysite.slogan %></h4>
 <h4 class="center">
   <%= @orbituarysite.dob.strftime("%d-%b-%Y") %>-
