changes to timeline not woeking still

--- a/app/views/orbituarysites/_timeline.html.erb
+++ b/app/views/orbituarysites/_timeline.html.erb
@@ -1,4 +1,5 @@
-        <script>
+<div id="timeline_script">
+<script>
             $(document).ready(function() {
               createStoryJS({
                     type:       'timeline',
@@ -10,4 +11,7 @@
             });
         </script>
       
-         <div id="my-timeline"></div>
+				<div id="my-timeline"></div>
+			</div>
+
+			<div id="timeline_show"></div>
