css name changes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,7 @@
  *= require timelineJS/timeline
  *= require gmaps4rails
  *= require leaflet
- *= require obi.webflow
+ *= require obiwebflow
  *= require webflow
  *= require home
  */
