--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
         <div class="w-container">
           <p class="footer-text">Made in Heavan.</p><a class="footer-link" href="http://www.flickr.com/photos/kara_allyson/" target="_blank">Authored by: Coding Donkeys</a><a class="footer-link" href="http://www.pixeden.com/psd-mock-up-templates/3/4-view-iphone-5-psd-vector-mockup"
           target="_blank">Bandwidth &amp; Storage Sponsored By ORU PAPER</a>
-          <img class="logo-in-footer" src="images/4ba690df-2ae6-4459-903e-238c6569b152_logo-footer.png" width="25px" alt="4ba690df-2ae6-4459-903e-238c6569b152_logo-footer.png">
+        <%= image_tag ("logo-footer.png"), :class => "logo-in-footer" %>
         </div>
       </div>
 
@@ -59,7 +59,6 @@
 <script>
   // To attach Backstrech as the body's background
   $.backstretch("<%= asset_path('Image_bck_copy.png')%>");
-
 </script>
 </body>
 </html>
