--- a/app/views/condolences/edit.html.erb
+++ b/app/views/condolences/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing condolence</h1>
+<div class="container new-form">
+  <h1>Editing condolence</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @condolence %> |
-<%= link_to 'Back', condolences_path %>
+  <%= link_to 'Show', @condolence %> |
+</div>
