--- a/app/views/condolences/new.html.erb
+++ b/app/views/condolences/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New condolence</h1>
+<div class="container new-form">
+  <h1>Create condolence</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', condolences_path %>
+</div>
