--- a/app/views/memories/edit.html.erb
+++ b/app/views/memories/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing memory</h1>
+<div class="container new-form">
+  <h1>Editing memory</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @memory %> |
-<%= link_to 'Back', memories_path %>
+  <%= link_to 'Show', @memory %> |
+</div>
