--- a/app/views/orbituarysites/edit.html.erb
+++ b/app/views/orbituarysites/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing orbituarysite</h1>
+<div class="container new-form">
+  <h1>Edit orbituarysite</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @orbituarysite %> |
-<%= link_to 'Back', orbituarysites_path %>
+  <%= render 'form' %>
+</div>
