--- a/app/views/orbiturer_share_images/_form.html.erb
+++ b/app/views/orbiturer_share_images/_form.html.erb
@@ -39,7 +39,7 @@
   <div class="field">
     <%= f.label :description %>
     <%= f.text_area :description, :rows => 3, :width => 300, :maxlength => "100" %>
-  </div>
+  </div> <br />
   <div class="actions">
     <%= f.submit "Share Images", :class => "btn btn-primary" %>
   </div>
