--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -116,7 +116,6 @@ background-color: #01538d \9;
 }
 
 .image_left_side {
-  position:absolute;
   margin-left: 20px;
   margin-right:20px;
   float:none;
@@ -191,4 +190,25 @@ width: 70%;
 .leaflet-container {
   width: 550px;
   height: 400px;
+}
+.btn{
+  margin:0px 5px 0px 0px;  
+}
+.new-form{
+  input{
+    height: 30px;
+    width: 220px;
+  }
+  select{
+    margin-bottom: 10px;
+  }
+  label{
+    margin-bottom: 10px;
+  }
+  input[type="radio"]{
+    height: 15px;
+    width: 15px;
+    margin-left: 20px;
+    margin-bottom: 5px;
+  }
 }
