--- a/app/views/histories/new.html.erb
+++ b/app/views/histories/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New history</h1>
+<div class="container new-form">
+  <h1>New history</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Back', histories_path %>
+  <%= link_to 'Back', histories_path %>
+</div>
