--- a/app/views/memories/index.html.erb
+++ b/app/views/memories/index.html.erb
@@ -1,25 +1,27 @@
-<h1>Listing memories</h1>
+<div class="container">
+  <h1>Listing memories</h1>
 
-<table>
-  <tr>
-    <th>Body</th>
-    <th>Orbituarysite</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+  <table>
+    <tr>
+      <th>Body</th>
+      <th>Orbituarysite</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
 
-<% @memories.each do |memory| %>
-  <tr>
-    <td><%= memory.body %></td>
-    <td><%= memory.orbituarysite_id %></td>
-    <td><%= link_to 'Show', memory %></td>
-    <td><%= link_to 'Edit', edit_memory_path(memory) %></td>
-    <td><%= link_to 'Destroy', memory, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+    <% @memories.each do |memory| %>
+    <tr>
+      <td><%= memory.body %></td>
+      <td><%= memory.orbituarysite_id %></td>
+      <td><%= link_to 'Show', memory %></td>
+      <td><%= link_to 'Edit', edit_memory_path(memory) %></td>
+      <td><%= link_to 'Destroy', memory, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
+    <% end %>
+  </table>
 
-<br />
+  <br />
 
-<%= link_to 'New Memory', new_memory_path %>
+  <%= link_to 'New Memory', new_memory_path %>
+</div>
