--- a/app/views/memories/new.html.erb
+++ b/app/views/memories/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New memory</h1>
+<div class="container new-form">
+  <h1>New memory</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', memories_path %>
+</div>
