--- a/app/views/notice_displays/new.html.erb
+++ b/app/views/notice_displays/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New notice_display</h1>
+<div class="container new-form">
+<h1>Create Notice</h1>
+  <%= render 'form' %>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', notice_displays_path %>
+</div>
