--- a/app/views/orbiturer_share_images/new.html.erb
+++ b/app/views/orbiturer_share_images/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New orbiturer_share_image</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', orbiturer_share_images_path %>
+<div class="container new-form">
+  <h1>Share image</h1>
+  <%= render 'form' %>
+</div>
