change background image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
 
 <script>
   // To attach Backstrech as the body's background
-  $.backstretch("<%= asset_path('Image_bck_copy.png')%>");
+  $.backstretch("<%= asset_path('background.png')%>");
 </script>
 </body>
 </html>
