--- a/app/views/orbituarysites/show.html.erb
+++ b/app/views/orbituarysites/show.html.erb
@@ -1,7 +1,7 @@
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 <div class="row">
-  <div class="col-md-12">
-    <div class="col-md-5 notice pull-left">
+  <div class="container">
+    <div class="span5 notice pull-left">
       <h3 class="center">அமரர்</h3>
       <h1 class="center">
         <%= @orbituarysite.name %>
@@ -61,7 +61,7 @@
       <div class="fb-like" data-href="http://notice.tamil.com" data-width="450" data-layout="button_count" data-show-faces="true" data-send="false"></div>
 
     </div>
-    <div class="col-md-7">
+    <div class="span6">
       <div class="tabbable">
         <ul class="nav nav-tabs" id="noticetabs">
           <li  class="active"><a href="#tab1" data-toggle="tab">அறிவித்தல்கள்</a></li>
