--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,11 +9,9 @@
       <a class="brand" href="http://ninaivu.7zero.com:3000"><%= image_tag('ninaivu_logo.png') %></a>
       <div class="container-fluid nav-collapse">
         <ul class="nav">
-          <li class="navbar-text"><%# link_to "Create Orbituary site", new_orbituarysite_path :data-toggle => "modal" href="#myModal2"  %>
+          <li class="navbar-text brand"><%# link_to "Create Orbituary site", new_orbituarysite_path :data-toggle => "modal" href="#myModal2"  %>
             <% if user_signed_in? %>                
             <%= link_to "Create Orbituary Site", '/orbituarysites/new', :class => "btn btn-default" %>
-            <% else %>
-            <a data-toggle="modal" href="#myModal6" href="/condolences/new"><button class="btn btn-default">Create Orbituary site</button></a>
             <% end %>
           </li>
         </ul>
@@ -38,12 +36,16 @@
             </div><!-- /.modal-content -->
           </div><!-- /.modal-dialog -->
         </div><!-- /.modal -->
-
-
-        <% if user_signed_in? %>
-        <%= link_to 'Account', home_account_path, :class => "btn btn-default color_black" %>
-        <%= link_to 'Logout', destroy_user_session_path, :class => "btn btn-default color_black" %>        
-        <% end %>
+        <ul class="nav pull-right" style = "margin-top: 11px;">
+          <% if user_signed_in? %>
+          <li>
+            <%= link_to 'Account', home_account_path, :class => "btn btn-default color_black" %>
+          </li>
+          <li>
+            <%= link_to 'Logout', destroy_user_session_path, :class => "btn btn-default color_black" %>        
+          </li>
+          <% end %>
+        </ul>
       </div><!--/.nav-collapse -->
     </div>
   </div>
