solve ui orbituary show page

--- a/app/views/histories/edit.html.erb
+++ b/app/views/histories/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing history</h1>
+<div class="container new-form">
+  <h1>Editing history</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @history %> |
-<%= link_to 'Back', histories_path %>
+</div>
