--- a/app/views/histories/new.html.erb
+++ b/app/views/histories/new.html.erb
@@ -1,7 +1,6 @@
 <div class="container new-form">
-  <h1>New history</h1>
+  <h1>Create history</h1>
 
   <%= render 'form' %>
 
-  <%= link_to 'Back', histories_path %>
 </div>
