--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,12 +40,12 @@
      <div class="row">
        <%# bootstrap_flash %>
        <% if notice %>
-         <div class="alert alert-info">
+         <div class="alert alert-info container">
            <%= notice%>
          </div>
        <% end %>
        <% if alert %>
-         <div class="alert alert-danger">
+         <div class="alert alert-danger container">
            <%= alert %>
          </div>
        <% end %>
