--- a/app/views/notice_displays/edit.html.erb
+++ b/app/views/notice_displays/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing notice_display</h1>
+<div class="container new-form">
+  <h1>Editing notice_display</h1>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @notice_display %> |
-<%= link_to 'Back', notice_displays_path %>
+  <%= render 'form' %>
+</div>
