--- a/app/views/orbituarysites/new.html.erb
+++ b/app/views/orbituarysites/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New orbituarysite</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', orbituarysites_path %>
+<div class="container new-form">
+  <h1>New orbituarysite</h1>
+  <%= render 'form' %>
+</div>
