--- a/app/views/orbiturer_share_images/edit.html.erb
+++ b/app/views/orbiturer_share_images/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Editing orbiturer_share_image</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @orbiturer_share_image %> |
-<%= link_to 'Back', orbiturer_share_images_path %>
+<div class="container new-form">
+  <h1>Editing orbiturer_share_image</h1>
+  <%= render 'form' %>
+</div>
