--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -200,10 +200,10 @@ width: 70%;
     width: 220px;
   }
   select{
-    margin-bottom: 10px;
+    margin-bottom: 15px;
   }
   label{
-    margin-bottom: 10px;
+    margin-top: 15px;
   }
   input[type="radio"]{
     height: 15px;
@@ -211,6 +211,9 @@ width: 70%;
     margin-left: 20px;
     margin-bottom: 5px;
   }
+.input-append .add-on:last-child{
+  height: 30px;
+}
 }
 .nav-tabs > li > a{
   background-color: #F3F3F3;
