changes to application alert hide in 5 sec

--- a/app/views/histories/new.html.erb
+++ b/app/views/histories/new.html.erb
@@ -1,6 +1,8 @@
+<div class="container-fluid container">
 <div class="container new-form">
   <h1>Create history</h1>
 
   <%= render 'form' %>
 
+</div>
 </div>
