--- a/app/views/memories/new.html.erb
+++ b/app/views/memories/new.html.erb
@@ -1,6 +1,9 @@
+
+<div class="container-fluid container">
 <div class="container new-form">
   <h1>New memory</h1>
 
 <%= render 'form' %>
 
+</div>
 </div>
