--- a/app/views/notice_displays/new.html.erb
+++ b/app/views/notice_displays/new.html.erb
@@ -1,5 +1,8 @@
+
+<div class="container-fluid container">
 <div class="container new-form">
 <h1>Create Notice</h1>
   <%= render 'form' %>
 
+</div>
 </div>
