--- a/app/views/orbituarysites/new.html.erb
+++ b/app/views/orbituarysites/new.html.erb
@@ -1,4 +1,7 @@
+
+<div class="container-fluid container">
 <div class="container new-form">
   <h1>New orbituarysite</h1>
   <%= render 'form' %>
+</div>
 </div>
