--- a/app/views/timelines/new.html.erb
+++ b/app/views/timelines/new.html.erb
@@ -1,5 +1,9 @@
+<div class="container-fluid container">
+<div class="container new-form">
 <h1>New timeline</h1>
 
 <%= render 'form' %>
 
 <%= link_to 'Back', timelines_path %>
+</div>
+</div>
