--- a/app/views/condolences/new.html.erb
+++ b/app/views/condolences/new.html.erb
@@ -1,6 +1,9 @@
+
+<div class="container-fluid container">
 <div class="container new-form">
   <h1>Create condolence</h1>
 
   <%= render 'form' %>
 
+</div>
 </div>
