--- a/app/views/orbituarysites/show.html.erb
+++ b/app/views/orbituarysites/show.html.erb
@@ -1,5 +1,5 @@
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-<div class="row">
+<div class="container-fluid container">
   <div class="container">
     <div class="span5 notice pull-left">
       <h3 class="center">அமரர்</h3>
@@ -57,12 +57,12 @@
       </p>
       <br />
       <%= render_shareable :buttons => ['facebook']%>
-      <%= twitter_button %>
+      <%# twitter_button %>
       <%= google_plus_button %>
-      <!--      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://localhost:3000/orbituarysites/1" data-text=<%= @orbituarysite.name %> data-via="anbublacky">Tweet</a>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://notice.tamil.com/orbituarysites/<%= @orbituarysite.id.to_s%>" data-text=<%= @orbituarysite.name %> data-via="Notice">Tweet</a>
       <script>/*!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');*/</script>
-      -->
-      <div class="fb-like" data-href="http://notice.tamil.com" data-width="450" data-layout="button_count" data-show-faces="true" data-send="false"></div>
+      
+      <div class="fb-like" data-href="http://notice.tamil.com/orbituarysites/<%= @orbituarysite.id.to_s%>" data-width="450" data-layout="button_count" data-show-faces="true" data-send="false"></div>
 
     </div>
     <div class="span6">
@@ -130,8 +130,8 @@
                 <% b = a.first %>
                 <h6><%= b.event_type %></h6>
                 <span class="events">
-                  <span class="eventtitle"> திகதி:</span> <span class="eventaction"><%= b.eventdate.strftime("%d-%b-%Y") %> - 
-                    <%= b.eventtime.to_s(:time) %></span>
+                  <span class="eventtitle"> திகதி:</span> <span class="eventaction"><% if b.eventdate %><%= b.eventdate.strftime("%d-%b-%Y") %> - 
+                      <%= b.eventtime.to_s(:time) %><% end %></span>
                   <span class="eventtitle">  இடம்: </span> <span class="eventaction">
                     <%= b.country %>
                     <%= b.address1 %>
@@ -289,13 +289,13 @@
                 <%= link_to 'Delete', f, method: :delete, data: { confirm: 'Are you sure?' }, :class => "btn btn-danger pull-right" %>
                 <% end %>
                 <% end %>
-                <h5><%= f.title %></h5>
+                <h5><%= f.title.html_safe %></h5>
                 <article>
                   <%# if f.body.length > 250 %>
                   <%# truncate(f.body, length: 250) %>
                   <%# link_to_function '...Read more', "$(this).parent().html('#{escape_javascript f.body}')" %>
                   <%# else %>
-                  <%= f.body %>
+                  <%= f.body.html_safe %>
                   <%# end %>
                   <%# raw(f.body) %>
                   <%# link_to 'read more', '#', :class => "readmore-js-toggle" %> 
@@ -303,7 +303,7 @@
                 <h6>Memory shared by <%= f.user.name %></h6>
                 Posted on: <%= f.created_at.strftime("%d-%b-%Y") %>
                 <p></p>
-                <a href="https://twitter.com/share" class="twitter-share-button" data-text=<%= f.title %> data-url=<%= "http://nabthat.com:3000/memories/"+f.id.to_s %> data-via="anbublacky">Tweet</a>
+                <a href="https://twitter.com/share" class="twitter-share-button" data-text=<%= f.title %> data-url=<%= "http://notice.tamil.com/memories/"+f.id.to_s %> data-via="anbublacky">Tweet</a>
                 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 <div class="fb-like" data-href="http://notice.tamil.com" data-width="100" data-layout="button_count" data-show-faces="true" data-send="false"></div>
               </div>
@@ -396,7 +396,7 @@
                     <p><%= current_user.name %></p>
                     <%= f.created_at.strftime("%d-%b-%Y") %>
                   </div>
-                  <div class="span9">
+                  <div class="span5">
                     <b><%= f.title %></b><br />
                     <span class="line-break">
                       <%= f.description %>
