--- a/app/views/orbiturer_share_images/new.html.erb
+++ b/app/views/orbiturer_share_images/new.html.erb
@@ -1,4 +1,7 @@
+
+<div class="container-fluid container">
 <div class="container new-form">
   <h1>Share image</h1>
   <%= render 'form' %>
+</div>
 </div>
